# Just-call

./: .gitignore  CLOUDFLARE_DEPLOY.md  README.md  READMEtechnique.md  RENDER_DEPLOY.md  docker-compose.yml  render.yaml  repo.txt  wrangler.jsonc
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260511_0001_initial_sales_workspace.py  20260511_0002_custom_status_options.py  20260512_0003_user_login_session.py  20260512_0004_ai_review_metrics_transcript_data.py
backend/app/: ai_coach.py  config.py  database.py  main.py  models.py  schemas.py  security.py  seed.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  wrangler.toml
frontend/src/: App.vue  mockData.ts  style.css  types.ts
frontend/src/api/: client.js  client.ts
frontend/src/components/: AiReviewCard.vue  AppSidebar.vue  CallDetailDrawer.vue  CallHistoryItem.vue  CallLogDrawer.vue  DashboardHeader.vue  DirectCallCard.vue  LumaSurface.vue  MetricCard.vue  NotesPanel.vue  ProspectDrawer.vue  ProspectForm.vue  ProspectPanel.vue  ProspectTable.vue  ReplayBadge.vue  ScoreMetricList.vue  SessionSetupModal.vue  StartCallButton.vue  TimerPanel.vue  ToastStack.vue  Waveform.vue
frontend/src/composables/: useMicrophoneLevels.ts  useTwilioVoice.ts
frontend/src/stores/: workspace.ts
frontend/src/utils/: callComparison.ts
frontend/src/views/: AiReplayView.vue  AnalyticsView.vue  CallView.vue  HomeView.vue  (+9 more)
mobile/: .env.example  App.tsx  README.md
mobile/src/: config.ts
scripts/: dev.sh
(+4 files in other folders)
